--- a/app/views/events/_enroll_button.html.erb
+++ b/app/views/events/_enroll_button.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.enrolls.last.id == event.id %>
   <%= link_to t(".enrolling"), user_enroll_event_path(event_id: event.id),
-              method: :delete, remote: true, class: "button" %>
+    method: :delete, remote: true, class: "button button-text" %>
 <% else %>
   <%= link_to t(".enroll"), user_enroll_events_path(event_id: event.id),
-              method: :post, remote: true, class: "button" %>
+    method: :post, remote: true, class: "btn button-text-default" %>
 <% end %>
