--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -114,8 +114,16 @@ a, a:hover, a:visited, a:active, a:link {
   margin: 0;
 }
 
+.p-20 {
+  padding: 20px;
+}
+
 .pl-45 {
   padding-left: 45px;
+}
+
+.pl-20 {
+  padding-left: 20px;
 }
 
 .pl-15 {
@@ -146,9 +154,9 @@ a, a:hover, a:visited, a:active, a:link {
   padding-top: 17px;
 }
 
-.py-15 {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.py-20 {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .py-15 {
@@ -284,6 +292,10 @@ a, a:hover, a:visited, a:active, a:link {
 
 .fa-user-circle::before {
   font-size: xx-large;
+}
+
+.fs-09em {
+  font-size: 0.9em;
 }
 
 .remember_me {
