--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,16 +7,16 @@
       <%= link_to t(".courses"), "#pageSubmenu", class: "dropdown-toggle",
         aria_expanded: true, data: {toggle: "collapse"} %>
       <ul class="collapse show list-unstyled" id="pageSubmenu">
-        <li><%= link_to t(".lastest"), "#" %>
+        <li><%= link_to t(".latest"), "#" %>
         </li>
         <li><%= link_to t(".most_popular"), "#" %>
         </li>
         <li><%= link_to t(".enrolling"), "#" %>
         </li>
-        <li><%= link_to t(".my_enroll"),
+        <li><%= link_to t(".participating"),
           user_enroll_event_path(event_id: current_user.enrolls.last.id) %>
         </li>
-        <li><%= link_to t(".my_enrolled"), "#" %>
+        <li><%= link_to t(".completed"), "#" %>
         </li>
       </ul>
     </li>
