--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,6 +1,8 @@
 <%= link_to event, class: "refactor_link" do %>
   <div class="course mb-30">
-    <div class="course_thumbnail"><%= fa_icon "image" %></div>
+    <div class="course_thumbnail">
+      <%= image_tag(event.thumbnail.file_url) if event.thumbnail %>
+    </div>
     <div class="course_title"><%= rescue_title event.name %></div>
     <div class="course_price"><%= number_to_vnd event.price %></div>
     <div class="course_major">
