--- a/app/views/events/show.js.erb
+++ b/app/views/events/show.js.erb
@@ -1,3 +1,3 @@
-$('#enroll_button').html('<%= j render "events/enroll_button",
+$('#enroll_request').html('<%= j render "events/enroll_request",
   current_user: current_user, event: @user_event %>');
 $('#sidebar').html(`<%= j render "layouts/sidebar" %>`);
