--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,13 @@
   </body>
 
   <% flash.each do |type, text| %>
-    <%= javascript_tag "noty('#{text}', '#{check_noty_type type}');" %>
+    <%= javascript_tag defer: true, nonce: true do %>
+      noty('<%= text %>', '<%= check_noty_type type %>')
+    <% end %>
+  <% end %>
+
+  <%= javascript_tag defer: true, nonce: true do %>
+    I18n.defaultLocale = '<%= I18n.default_locale %>'
+    I18n.locale = '<%= I18n.locale %>'
   <% end %>
 </html>
