--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -21,7 +21,7 @@ $content_gray: #fafafa;
 body {
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
-  font-weight: bold;
+  font-weight: normal;
   background: white;
   color: $sidebar_a_gray;
   margin: 0;
