--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -12,7 +12,7 @@
         <li><%= link_to t(".enrolling"), "#" %></li>
         <% unless current_user.enrolls.empty? %>
           <li><%= link_to t(".participating"),
-            user_enroll_event_path(event_id: current_user.enrolls.last.id) %></li>
+            user_enroll_event_path(event_id: current_user.enrolls.last) %></li>
           <li><%= link_to t(".completed"), "#" %></li>
         <% end %>
       </ul>
