--- a/app/views/user_enroll_events/show.html.erb
+++ b/app/views/user_enroll_events/show.html.erb
@@ -40,65 +40,18 @@
       <div class="tab_panel active no-padding px-20">
         <div class="row no-margin fs-09em">
           <div class="col-md-3 border_right no-padding pr-20">
-            <% @user_event.participants.where.not(id: current_user).each do |user| %>
-              <%= form_tag conversations_path(sender_id: current_user,
-                receiver_id: user), remote: true do  %>
-                <%= button_tag user.name, type: :submit, class: "btn button-text-default" %>
-              <% end %>
-            <% end %>
+            <%= render partial: "participant", collection: @user_event
+              .participants.where.not(id: current_user), as: :user %>
           </div>
-          <div class="col-md-6 border_right no-padding px-20">
-            <div id="messages_form"></div>
+
+          <div id="messages_form" class="col-md-6 border_right no-padding px-20">
+            <%= render "messages/index", conversation: @conversation,
+              message: @conversation.messages.new %>
           </div>
-          <div class="col-md-3 no-padding pl-20">
-            <% current_user.requirements.each do |requirement| %>
 
-              <div class="border_bottom py-20">
-                <%= form_for requirement, url: user_event_requirement_path(requirement),
-                  method: :put do |f| %>
-                  <%= hidden_field_tag "user_event_requirement[verified]", !requirement.verified? %>
-                  <%= f.button do %>
-                    <% if requirement.verified? %>
-                      <%= fa_icon "times", class: "failed" %>
-                    <% else %>
-                      <%= fa_icon "check", class: "pass" %>
-                    <% end %>
-                  <% end %>
-                <% end %>
-
-                <div class="event_requirements">
-                  <div class="display_start">
-                    <% if requirement.verified? %>
-                      <%= fa_icon "check", class: "pass" %>
-                    <% else %>
-                      <%= fa_icon "times", class: "failed" %>
-                    <% end %>
-                    <div class="pl-5px">
-                      <%= requirement.detail.name %></div>
-                  </div>
-                  <div><%= t ".deadline" %>:
-                    <%= rescue_req_deadline requirement %></div>
-                </div>
-                <div class="req_description">
-                  <%= requirement.detail.description %></div>
-                <% requirement.images.new if requirement.images.empty? %>
-                <% requirement.images.each do |image| %>
-                  <%= image_tag(image.file_url) if image.file? %>
-                <% end %>
-                <%= form_for requirement,
-                  url: user_event_requirement_path(requirement),
-                  method: :patch, html: {class: "d-flex"} do |f| %>
-                  <%= f.fields_for :images do |image| %>
-                    <%= image.label :file, t(".choose_file"),
-                      class: "btn button-text-default no-margin",
-                      for: f.hash %>
-                    <%= image.file_field :file, hidden: true,
-                      id: f.hash %>
-                  <% end %>
-                  <%= f.submit t(".upload"), class: "button button-text" %>
-                <% end %>
-              </div>
-            <% end %>
+          <div id="requirement" class="col-md-3 no-padding pl-20">
+            <%= render partial: "requirement",
+              collection: requirement_collection(@conversation) %>
           </div>
         </div>
       </div>
