--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -61,12 +61,9 @@
             <h3><%= t ".leader" %></h3>
             <div class="course_features">
               <div class="course_feature justify-content-start">
-                <%= image_tag(@event.leaders.first.avatar.file_url,
-                  class: "user_image") if @event.leaders.first.avatar %>
+                <%= user_image_for @event.leaders.first, "user_image" %>
                 <div class="user_title">
-                  <%= link_to user_path @event.leaders.first do %>
-                    <h5 class="no-margin"><%= @event.leaders.first.name %></h5>
-                  <% end %>
+                  <h5 class="no-margin"><%= @event.leaders.first.name %></h5>
                 </div>
               </div>
             </div>
