--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,12 +29,7 @@
         <li class="dropdown">
           <%= link_to "#", class: "dropdown-toggle no-after",
             data: {toggle: "dropdown"} do %>
-            <% if current_user.avatar %>
-              <%= image_tag current_user.avatar.file_url,
-                class: "user_image_header" %>
-            <% else %>
-              <%= fa_icon "user-circle" %>
-            <% end %>
+            <%= user_image_for current_user, "user_image_header" %>
           <% end %>
 
           <ul class="dropdown-menu no-padding">
